// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots GridX Basics 6 cells 1`] = `
<XYGridElement
  alignX="left"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    key=".0"
    small={6}
    vertical={false}
  >
    6 cells
  </Cell>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    key=".1"
    small={6}
    vertical={false}
  >
    6 cells
  </Cell>
</XYGridElement>
`;

exports[`Storyshots GridX Basics 12/6/4 and 12/6/8 cells 1`] = `
<XYGridElement
  alignX="left"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    key=".0"
    large={4}
    medium={6}
    vertical={false}
  >
    12/6/4 cells
  </Cell>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    key=".1"
    large={8}
    medium={6}
    vertical={false}
  >
    12/6/8 cells
  </Cell>
</XYGridElement>
`;

exports[`Storyshots GridX Basics Full width cell 1`] = `
<XYGridElement
  alignX="left"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    key=".0"
    vertical={false}
  >
    full width cell
  </Cell>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    key=".1"
    vertical={false}
  >
    full width cell
  </Cell>
</XYGridElement>
`;
